# cronbox.ru

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  ENV.md  MIGRATION_SUMMARY.md  Makefile  README.md  SENTRY_QUICKSTART.md  SENTRY_SETUP.md  cronbox-python-plan.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  vc-article-draft.md
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 05d50775a665_add_workers_table.py  1687bba71720_merge_heartbeats_and_overlap_prevention.py  1b4363cc1e2c_add_notification_templates_table.py  2036dbb6694a_add_last_login_at_to_user.py  469467ee9ee6_add_concurrency_policy_to_process_.py  4a095f5a9ba6_add_is_enabled_to_chain_steps.py  4daf8661bd73_user_level_billing.py  75efe7bbc4cd_add_email_log_table.py  CLEAN_add_concurrency_policy.py.example  a1b2c3d4e5f6_add_preferred_language_to_users.py  b2c3d4e5f6a7_add_account_lockout_fields.py  be84994e62e5_add_avatar_url_to_users.py  c77d06c7d679_merge_ssl_monitors_and_protocol_types.py  c7d8e9f0a1b2_remove_region_from_workers.py  d3e4f5a6b7c8_add_scheduled_plan_change.py  e5f6a7b8c9d0_workspace_slug_unique_per_owner.py  f645c1f88fb9_initial_migration.py  f6a7b8c9d0e1_add_task_chains.py  g7b8c9d0e1f2_add_heartbeat_tables.py  g7h8i9j0k1l2_add_overlap_prevention.py  h8c9d0e1f2g3_add_ssl_monitors.py  h8i9j0k1l2m3_add_protocol_types.py  i9j0k1l2m3n4_add_process_monitors.py  j0k1l2m3n4o5_add_max_messenger.py  k1l2m3n4o5p6_add_process_monitor_to_executions.py
backend/app/: __init__.py  cli.py  config.py  main.py
backend/app/api/: deps.py  router.py
backend/app/bot/: handlers.py  max_handlers.py
backend/app/core/: exceptions.py  rate_limiter.py  redis.py  security.py  security_headers.py  url_validator.py
backend/app/db/: database.py
backend/app/locales/: en.json  ru.json
backend/examples/: worker_client.py
backend/scripts/: invalidate_plans_cache.py  seed_loadtest_users.py  seed_plans.py  seed_templates.py
backend/tests/: conftest.py  test_auth.py  test_billing.py  test_cron_tasks.py  test_delayed_tasks.py  test_executions.py  test_heartbeats.py  test_notifications.py  test_process_monitors.py  test_redis_cache.py  test_ssl_monitors.py  test_task_chains.py  test_workers.py  test_workspaces.py
(+596 files in other folders)
