[project]
name = "cronbox"
version = "0.1.0"
description = "CronBox - HTTP request scheduling service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.24.0",
    "aiosmtplib>=5.0.0",
    "alembic>=1.17.2",
    "apscheduler>=3.11.2",
    "arq>=0.26.3",
    "asyncpg>=0.31.0",
    "bcrypt>=4.2.0",
    "croniter>=6.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "orjson>=3.11.5",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "pytz>=2025.2",
    "redis>=5.3.1",
    "resend>=2.19.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.40.0",
    "yookassa>=3.9.0",
]

[project.scripts]
cronbox-worker = "app.cli:run_worker"
cronbox-scheduler = "app.cli:run_scheduler"
cronbox-server = "app.cli:run_server"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "types-pytz>=2024.1.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E402",  # Module level import not at top of file (FastAPI pattern)
    "F821",  # Undefined name (SQLAlchemy forward references)
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811", "F841"]  # Allow unused imports/variables in tests
"examples/*" = ["F401"]  # Allow unused imports in examples

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# Disable strict checks that cause issues with SQLAlchemy and external libs
warn_return_any = false
warn_unused_ignores = false
check_untyped_defs = false
disallow_untyped_defs = false
# Ignore SQLAlchemy forward reference issues
disable_error_code = ["name-defined", "attr-defined", "override", "assignment", "arg-type", "return-value", "union-attr", "operator", "misc", "valid-type", "import-untyped"]

[[tool.mypy.overrides]]
module = "app.models.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.db.repositories.*"
ignore_errors = true
